<resources>
    <string name="app_name">PokeapiApp</string>
    <string name="email_field_placeholder">Email</string>
    <string name="password_field_placeholder">Senha</string>
    <string name="pokeapi_logo">Pokeapi Logo</string>
    <string name="access_button_text">Entrar</string>
    <string name="signup_button_text">Cadastrar</string>
    <string name="signup_frag_button_text">Criar conta</string>
    <string name="password_confirmation_field_placeholder">Confirme a senha</string>
    <string name="username_field_placeholder">Nome</string>
    <string name="return_login_button_text">Retornar</string>
    <string name="login_frag_button_text">Login</string>
    <string name="toast_signup_email_required">Email obrigatório</string>
    <string name="toast_signup_password_required">Senha obrigatória</string>
    <string name="toast_signup_password_check_required">Confirme a senha</string>
    <string name="toast_signup_username_required">Nome de usuário obrigatório</string>
    <string name="toast_signup_password_check">Senhas informadas não são iguais</string>
    <string name="toast_signup_success">Usuário cadastrado</string>
    <string name="toast_signup_exception">Cadastro com problema, tente novamente</string>
    <string name="toast_signup_invalid_cred">Email inválido</string>
    <string name="toast_signup_weak_pass">Digite uma senha com no mínimo 6 caracteres</string>
    <string name="toast_signup_collision">Este e-mail já foi cadastrado</string>
    <string name="toast_signup_connection_fail">Falha ao conectar com a internet</string>
    <string name="toast_login_email_required">Informe email</string>
    <string name="toast_login_password_required">Informe senha</string>
    <string name="toast_login_exception">Problema com o login, tente novamente</string>
    <string name="toast_login_invalid_user">Usuário inexistente</string>
    <string name="toast_login_invalid_cred">Senha incorreta</string>
    <string name="toast_login_connection_fail">Falha de conexão</string>
    <string name="battle">Batalha</string>
    <string name="favorites">Favoritos</string>
    <string name="list">Lista</string>
    <string name="user">Usuário</string>
    <string name="pkm_add_desc">Adicionar pokemon a batalha</string>
    <string name="add_fav_desc">Adicionar pokemon aos favoritos</string>
    <string name="pkm_img_desc">Imagem do Pokemon</string>
    <string name="name_section_text">NOME</string>
    <string name="email_section_text">EMAIL</string>
    <string name="logout_button_text">SAIR</string>
    <string name="hp_attr_text">PV:</string>
    <string name="attack_attr_text">Ataque:</string>
    <string name="defense_attr_text">Defesa:</string>
    <string name="special_attack_attr_text">Ataque especial:</string>
    <string name="special_defense_attr_text">Defesa especial:</string>
    <string name="speed_attr_text">Velocidade:</string>
    <string name="total_attr_text">Total:</string>
    <string name="pokemon_default_header">Pokemon</string>
    <string name="find_text">Nome do Pokemon</string>
    <string name="favorite_text">Lista de Favoritos</string>
    <string name="draw_text">EMPATE</string>
    <string name="winner_text">VENCEDOR</string>
    <string name="loser_text">PERDEDOR</string>
    <string name="select_both_pokemon">Selecione os dois pokemons para saber qual será o vencedor</string>


</resources>