<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item

        android:id="@+id/pokemonFavoritesFragment"
        android:title="@string/favorites"
        android:icon="@drawable/star"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/pokemonBattleFragment"
        android:title="@string/battle"
        android:icon="@drawable/battle"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/pokemonListFragment"
        android:title="@string/list"
        android:icon="@drawable/search"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/userFragment"
        android:title="@string/user"
        android:icon="@drawable/user"
        app:showAsAction="always"
        />
</menu>