<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/gray_2"
        android:padding="10dp">
        <TextView
            android:id="@+id/name_section"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/name_section_text"
            android:textAlignment="center"
            android:textSize="22sp"
            android:background="@color/gray_3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/name_section_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text=""
            android:textAlignment="center"
            android:textSize="22sp"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@id/name_section"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/email_section"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/gray_3"
            android:padding="15dp"
            android:text="@string/email_section_text"
            android:textAlignment="center"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_section_value"
            />

        <TextView
            android:id="@+id/email_section_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="15dp"
            android:text=""
            android:textAlignment="center"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_section"
            />

        <Button
            android:id="@+id/logout_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="25dp"
            android:text="@string/logout_button_text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/signup_return_color"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>