<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pokemon_card_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="20dp">

        <TextView
            android:id="@+id/pokemon_card_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/pokemon_default_header"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/gray_4"/>
        <ImageView
            android:id="@+id/pokemon_card_sprite"
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:background="@color/white"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/pokemon_card_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/pokemon_card_types"
            android:src="@drawable/pokeapi_256"
            />
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/pokemon_card_types"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pokemon_card_sprite"
            app:layout_constraintBottom_toTopOf="@id/pokemon_card_stats_container"
            android:padding="10dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:gravity="center"
            >
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/pokemon_card_stats_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/total_container"
            app:layout_constraintTop_toBottomOf="@id/pokemon_card_types"
            android:background="@color/gray_1"
            android:padding="10dp"
            android:layout_marginTop="5dp"
            >

            <TextView
                android:id="@+id/hp_attr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hp_attr_text"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/hp_value"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                />
            <TextView
                android:id="@+id/hp_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/hp_attr"
                />

            <TextView
                android:id="@+id/attack_attr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attack_attr_text"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/attack_value"
                app:layout_constraintTop_toBottomOf="@id/hp_attr"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                android:layout_marginTop="5dp"/>
            <TextView
                android:id="@+id/attack_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/hp_value"
                app:layout_constraintStart_toEndOf="@id/attack_attr"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/defense_attr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/defense_attr_text"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/defense_value"
                app:layout_constraintTop_toBottomOf="@id/attack_attr"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                android:layout_marginTop="5dp"/>
            <TextView
                android:id="@+id/defense_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/attack_value"
                app:layout_constraintStart_toEndOf="@id/defense_attr"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/special_attack_attr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/special_attack_attr_text"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/special_attack_value"
                app:layout_constraintTop_toBottomOf="@id/defense_attr"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                android:layout_marginTop="5dp"/>
            <TextView
                android:id="@+id/special_attack_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/defense_value"
                app:layout_constraintStart_toEndOf="@id/special_attack_attr"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/special_defense_attr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/special_defense_attr_text"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/special_defense_value"
                app:layout_constraintTop_toBottomOf="@id/special_attack_attr"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                android:layout_marginTop="5dp"/>
            <TextView
                android:id="@+id/special_defense_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/special_attack_value"
                app:layout_constraintStart_toEndOf="@id/special_defense_attr"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/speed_attr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speed_attr_text"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/speed_value"
                app:layout_constraintTop_toBottomOf="@id/special_defense_attr"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                android:layout_marginTop="5dp"/>
            <TextView
                android:id="@+id/speed_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/special_defense_value"
                app:layout_constraintStart_toEndOf="@id/speed_attr"
                android:layout_marginTop="5dp"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/total_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/selected_item"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pokemon_card_stats_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            >
            <TextView
                android:id="@+id/total_attr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/total_value"
                app:layout_constraintHorizontal_chainStyle="spread"
                android:text="@string/total_attr_text"
                android:textSize="18sp"
                android:textColor="@color/white"
                />
            <TextView
                android:id="@+id/total_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/total_attr"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="18sp"
                android:textColor="@color/white"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>